src/objects/SBQQ__PricingGuidanceTier__c.object
<CustomObject>
    <description>Pricing guidance tier that specifies discount for a given quantity range.</description>
    <fields>
        <fullName>SBQQ__FloorDiscount__c</fullName>
        <description>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Floor Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>The lowest quote line quantity that applies to this tier. This number must match the upper bound of the previous tier.</description>
        <inlineHelpText>The lowest quote line quantity that applies to this tier. This number must match the upper bound of the previous tier.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__NormDiscount__c</fullName>
        <description>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>Middle-range discount based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Norm Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingGuidance__c</fullName>
        <description>The pricing guidance that contains this tier.</description>
        <inlineHelpText>The pricing guidance that contains this tier.</inlineHelpText>
        <label>Pricing Guidance</label>
        <referenceTo>SBQQ__PricingGuidance__c</referenceTo>
        <relationshipLabel>Pricing Guidance Tiers</relationshipLabel>
        <relationshipName>PricingGuidanceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetDiscount__c</fullName>
        <description>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</description>
        <inlineHelpText>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</inlineHelpText>
        <label>Target Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <description>The highest quote line quantity that applies to this tier. This number must be one above the highest quantity that you want this tier to include.</description>
        <inlineHelpText>The highest quote line quantity that applies to this tier. This number must be one above the highest quantity that you want this tier to include.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Guidance Tier</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Guidance Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>